--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "components/chatroom";
 
 @import "components/form";
+@import "components/searchbar";
 
 div a{
   text-decoration: none;
@@ -35,4 +36,3 @@ body{
   margin: auto;
   width: 80vw;
 }
-
