--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,7 +6,7 @@
     <div class="card-trip radius h-25 mt-5">
       <div>
         <div class="color-font text-center">
-        <h2><%= @event.title %></h2>
+        <h2 class="text-center mb-3"><%= @event.title %></h2>
         <span><%= @event.date %></span>
         </div>
       </div>
@@ -17,17 +17,14 @@
       <%= cl_image_tag @event.photo.key, height: 150, class: "w-100 object-fit-cover" %>
       <div class="card-trip-infos">
         <div class="overflow-text">
-          <h2 class="text-center mb-3"><%= @event.title %></h2>
           <div class="d-flex">
             <span class="card-trip-pricing color-font w-10 mb-3"><%= @event.date %></span>
             <span class="card-trip-pricing color-font w-10 mb-3"><%= @event.location %></span>
           </div>
           <p class="text-center width overflow-scroll"><%= @event.description %></p>
-          <div class="text-center mt-2">
-            <div class="btn btn-cards"><%= link_to "Partager", events_path, class: "text-light m-0 p-0" %></div>
-          </div>
         </div>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        <%= cl_image_tag @event.user.photo.key, class: "card-trip-user avatar-bordered" %>
+        <%# <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" /> %>
       </div>
       <div class="d-flex justify-content-center mb-3">
         <%= form_with model: @participant do |f| %>
