--- a/app/views/shared/_navbarbottom.html.erb
+++ b/app/views/shared/_navbarbottom.html.erb
@@ -7,7 +7,7 @@
   <% end %>
   <% if user_signed_in? %>
     <%= link_to profile_path do %>
-      <i class="fa-regular fa-user"></i>
+      <i class="fa-solid fa-user"></i>
     <% end %>
   <% else %>
     <%= link_to new_user_session_path %>
