--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,12 @@
-<%= link_to event_chatroom_path(@event, @event.chatroom) do %>
-  <i class="fa-regular fa-message logochat-color"></i>
-<% end %>
+<div class="position-relative">
+  <div class="position-absolute chatroom-css color-font bg-transparent">
+    <div class="rounded-circle cercle">
+      <%= link_to event_chatroom_path(@event, @event.chatroom) do %>
+        <i class="fa-regular fa-message position-absolute position-bulle"></i>
+      <% end %>
+    </div>
+  </div>
+</div>
 <div class="container">
   <div class="margin">
     <div class="card-trip radius h-25">
@@ -11,31 +17,34 @@
       <div class="card-trip-infos color-font text-center pb-2">
         <div>
           <div class="color-font text-center">
-          <h2 class="text-center mb-3"><%= @event.title %></h2>
-          <span><%= @event.date %></span>
+            <h2 class="text-center mb-3"><%= @event.title %></h2>
+            <i class="fa-solid fa-calendar color-icon"></i>
+            <span><%= @event.date %></span>
           </div>
           <div class="color-font text-center pb-2">
+            <i class="fa-solid fa-ticket color-icon me-2"></i>
             <span><%= @event.capacity %> Places</span>
             <span> <%= @event.status %> event</span>
           </div>
-          <div class="overflow-text">
-            <span class="card-trip-pricing color-font w-10 mb-3"><%= @event.date %></span>
-            <span class="card-trip-pricing color-font w-10 mb-3"><%= @event.location %></span>
-            <p class="text-center width overflow-scroll"><%= @event.description %></p>
-            <%= form_with model: @participant do |f| %>
-              <%= f.text_field :event_id, value: @event.id, class: "d-none btn btn-cards" %>
-              <%# <%= f.text_field :user_id, value: current_user.id, class: "d-none btn btn-cards" %>
-              <%= f.submit "S'inscrire", class: "btn btn-cards text-light" %>
-            <% end %>
-            <% @event_ratings.each do |event_rating| %>
-              <div>
-                <h2 class="text-center"> <%= event_rating.user.username %></h2>
-                <h2 class="text-center"> <%= event_rating.comment %></h2>
-                <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
-                <%= render "shared/formulaireimages"%>
-              </div>
-            <% end %>
+          <div class="color-font text-center pb-2">
+            <i class="fa-solid fa-location-dot color-icon"></i>
+            <span class="color-font mb-3"><%= @event.location %></span>
           </div>
+          <p class="text-center width overflow-scroll"><%= @event.description %></p>
+          <%= form_with model: @participant do |f| %>
+            <%= f.text_field :event_id, value: @event.id, class: "d-none btn btn-cards" %>
+            <%# <%= f.text_field :user_id, value: current_user.id, class: "d-none btn btn-cards" %>
+            <%= f.submit "S'inscrire", class: "btn btn-cards text-light" %>
+          <% end %>
+          <% @event_ratings.each do |event_rating| %>
+            <div>
+              <h2 class="text-center"> <%= event_rating.user.username %></h2>
+              <h2 class="text-center"> <%= event_rating.comment %></h2>
+              <h2 class="text-center"> <%= event_rating.rating %> / 5</h2>
+              <%= render "shared/formulaireimages"%>
+            </div>
+          <% end %>
+
         </div>
       </div>
       <div>
