modification render et css du formulaire de modification des events

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -9,8 +9,8 @@
       <%= f.input :status %>
       <%= f.input :tricount %>
       <%= f.input :password %>
-      <div class="text-center">
-        <%= f.submit class:"btn btn-cards mb-2" %>
+      <div class="text-center pb-5">
+        <%= f.submit class:"btn btn-cards mb-2 text-light" %>
       </div>
     <% end %>
   </div>
