--- a/app/views/shared/_formulaireevent.html.erb
+++ b/app/views/shared/_formulaireevent.html.erb
@@ -8,6 +8,8 @@
     <%= f.input :status %>
     <%= f.input :password %>
     <%= f.input :photo, as: :file %>
-    <%= f.submit %>
+    <div class="text-center pb-5">
+      <%= f.submit class:"btn btn-cards mb-2 text-light" %>
+    </div>
   <% end %>
 </div>
