--- a/app/views/events/_map_index.html.erb
+++ b/app/views/events/_map_index.html.erb
@@ -1,5 +1,31 @@
-<div style="width: 100%; height: 600px;"
-  data-controller="mapindex"
-  data-mapindex-markers-value="<%= @markers.to_json %>"
-  data-mapindex-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class="container">
+  <div class="card-trip-map margin">
+    <div style="width: 100%; height: 80vh;"
+      data-controller="mapindex"
+      data-mapindex-markers-value="<%= @markers.to_json %>"
+      data-mapindex-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+    <div>
+    <% @events.first(5).each do |event| %>
+      <div class="margin">
+        <%= link_to event_path(event) do %>
+          <div class="card-trip radius h-25 mt-3 mb-4">
+            <div class="card-trip-infos">
+              <div class="overflow-text">
+                <div class="d-flex">
+                  <%= cl_image_tag event.user.photo.key, height: 150, class: "avatar-bordered" %>
+                  <h2 class="text-center mb-3"><%= event.title %></h2>
+                </div>
+                <div class="d-flex">
+                  <span class="color-font m-auto w-10"><%= event.date %></span>
+                  <span class="color-font m-auto w-10"><%= event.location %></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  </div>
 </div>
