--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -14,8 +14,9 @@ body {
 }
 
 .tb {
-  display: table;
-  width: 100%;
+  width: 80vw;
+  display: flex;
+  height: 7vh;
 }
 
 .td {
@@ -33,22 +34,19 @@ button {
   background-color: transparent;
 }
 
+.input-taille{
+  padding: 10px;
+  margin: 10px;
+}
+
+
 #cover {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  width: 550px;
-  padding: 35px;
-  margin: -83px auto 0 auto;
+  width: 100vw;
   background-color: #8536EA;
   border-radius: 20px;
   box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
   transform: scale(0.6);
-}
-
-form {
-  height: 96px;
+  height: 7vh;
 }
 
 .input-mod[type="text"] {
@@ -79,11 +77,11 @@ button {
   position: relative;
   top: -8px;
   left: 0;
-  width: 43px;
-  height: 43px;
+  width: 30px;
+  height: 30px;
   margin-top: 0;
-  border-width: 15px;
-  border: 15px solid #fff;
+  border-width: 4px;
+  border: 5px solid #fff;
   background-color: transparent;
   border-radius: 50%;
   transition: 0.5s ease all;
