--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="margin mb-3">
-    <h2 class="color-font text-center">Evénements auxquels vous avez participé</h2>
+    <h2 class="color-font text-center">Evénements auxquels vous avez participés</h2>
     <% @participants.each do |participant| %>
     <div class="position-relative">
       <%= cl_image_tag participant.event.photo.key, class: "position-absolute width-size-photo-profil rounded-circle"%>
@@ -15,11 +15,17 @@
       <div class="d-flex p-2">
         <div class="text-center flex-fill w-50 m-auto p-1">
 
-          <p class="color-font mb-1"><strong>Date</strong> <br> <%= participant.event.date %> </p>
+          <p class="color-font mb-1"><i class="fa-solid fa-calendar color-icon me-2"></i> <br> <%= participant.event.date %> </p>
         </div>
         <div class="text-center flex-fill w-50 m-auto p-1">
-          <p class="color-font mb-1"><strong>Lieu</strong> <br> <%= participant.event.location %> </p>
-          <p class="color-font mb-1"><strong>Statut</strong><br> <%= participant.event.status %> </p>
+          <p class="color-font mb-1"><i class="fa-solid fa-location-dot color-icon me-2"></i> <br> <%= participant.event.location %> </p>
+          <p class="color-font mb-1">
+            <% if participant.event.status == 'privé' %>
+              <i class="fa-solid fa-lock color-icon"></i>
+            <% else %>
+              <i class="fa-solid fa-unlock color-icon"></i>
+            <% end %><br><%= participant.event.status %>
+          </p>
         </div>
       </div>
       <div class="text-center mb-2">
@@ -32,7 +38,7 @@
     </div>
   </div>
   <div class="margin">
-    <h2 class="color-font text-center mt-4 mb-3">Evénements que vous avez organisé</h2>
+    <h2 class="color-font text-center mt-4 mb-3">Evénements que vous avez organisés</h2>
     <% @events.each do |event| %>
       <div class="card-trip radius h-25 mt-5 mb-4">
         <% if event.photo.attached? %>
@@ -42,13 +48,38 @@
           <div>
             <div class="text-center">
               <h5 class="card-title color-font text-center font-weight-bold mb-3"><strong><%=event.title%></strong></h5>
-              <p class="color-font mb-1"><strong>Date :</strong> <%= event.date %></p>
-              <p class="color-font mb-1"><strong>Capacité :</strong> <%= event.capacity %> tickets <i class="fa-solid fa-ticket logochat-color"></i></p>
-              <p class="color-font mb-1"><strong>Statut :</strong> <%= event.status %></p>
-              <p class="color-font mb-1"><strong>Lieu :</strong> <%= event.location %></p>
-              <p class="color-font mb-1"><strong>Description :</strong> <%= event.description %></p>
-              <p class="color-font mb-1"><strong>Cagnotte :</strong> <%= event.tricount %></p>
+
+            <div class="d-flex justify-content-center">
+              <i class="fa-solid fa-calendar color-icon me-2"></i>
+              <p class="color-font mb-1"><%= event.date %></p>
             </div>
+
+            <div class="d-flex justify-content-center">
+              <i class="fa-solid fa-ticket color-icon me-2"></i>
+              <p class="color-font mb-1"><%= event.capacity %> places <i class="fa-solid fa-ticket logochat-color"></i></p>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <% if event.status == 'privé' %>
+                <i class="fa-solid fa-lock color-icon me-2"></i>
+              <% else %>
+                <i class="fa-solid fa-unlock color-icon me-2"></i>
+              <% end %>
+              <p class="color-font mb-1"><%= event.status %></p>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <i class="fa-solid fa-location-dot color-icon me-2"></i>
+              <p class="color-font mb-1"><%= event.location %></p>
+            </div>
+
+            <div class="d-flex justify-content-center">
+              <i class="fa-solid fa-circle-info color-icon me-2"></i>
+              <p class="color-font mb-1"><%= event.description %></p>
+            </div>
+
+            <a href=<%= event.tricount %>><i class="fa-solid fa-piggy-bank color-icon me-2"></i></a>
+
             <div class="text-center mb-2">
               <div class="btn btn-cards">
                 <%= link_to "Supprimer", event_path(event), data: {turbo_method: :delete, turbo_confirm: "Etes-vous sûr ?"} %>
