--- a/app/views/shared/_event_index.erb
+++ b/app/views/shared/_event_index.erb
@@ -15,11 +15,11 @@
             <div class="card-trip-infos">
               <div class="overflow-text">
                 <h2 class="text-center mb-3"><%= event.title %></h2>
-                <div class="d-flex">
+                <div class="d-flex justify-content-center align-items-center">
                   <span class="color-font m-auto w-10"><%= event.date %></span>
                   <span class="color-font m-auto w-10"><%= event.location %></span>
                 </div>
-                <p class="text-center m-auto pt-2 width overflow-scroll">
+                <p class="text-center m-auto pt-2 width overflow-auto">
                   <%= event.description %>
                 </p>
               </div>
