rajout des event sur la map

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,16 @@ body{
 .color-icon{
   color: $primary-color;
 }
+
+.size-icon{
+  font-size: 2.5rem;
+}
+
+.border-comment{
+  border: 2px solid $primary-color;
+  border-radius: 20px;
+}
+
+.width-titre-map{
+  width: 54vw;
+}
