--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -44,7 +44,7 @@ button {
   width: 100vw;
   background-color: #8536EA;
   border-radius: 20px;
-  box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
+  box-shadow: 0 0 15px rgba(254,206,206,0.5);
   transform: scale(0.6);
   height: 7vh;
 }
@@ -75,13 +75,13 @@ button {
 
 #s-circle {
   position: relative;
-  top: -8px;
+  top: -26px;
   left: 0;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   margin-top: 0;
   border-width: 4px;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   background-color: transparent;
   border-radius: 50%;
   transition: 0.5s ease all;
