--- a/app/views/events/_map_index.html.erb
+++ b/app/views/events/_map_index.html.erb
@@ -9,16 +9,12 @@
     <% @events.first(5).each do |event| %>
       <div class="margin">
         <%= link_to event_path(event) do %>
-          <div class="card-trip radius h-25 mt-3 mb-4">
+          <div class="card-trip radius h-25 mt-2 mb-2 ms-2 me-2">
             <div class="card-trip-infos">
               <div class="overflow-text">
-                <div class="d-flex">
+                <div class="d-flex align-items-center">
                   <%= cl_image_tag event.user.photo.key, height: 150, class: "avatar-bordered" %>
-                  <h2 class="text-center mb-3"><%= event.title %></h2>
-                </div>
-                <div class="d-flex">
-                  <span class="color-font m-auto w-10"><%= event.date %></span>
-                  <span class="color-font m-auto w-10"><%= event.location %></span>
+                  <h2 class="text-center mb-3 width-titre-map"><%= event.title %></h2>
                 </div>
               </div>
             </div>
