--- a/app/views/shared/_formulaireimages.html.erb
+++ b/app/views/shared/_formulaireimages.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <%= simple_form_for(@event) do |f| %>
-    <%= f.input :images, as: :file,  input_html: { multiple: true } %>
+    <%= f.input :images, as: :file, class: "", input_html: { multiple: true } %>
     <div class="text-center pb-5">
       <%= f.submit class:"btn btn-cards mb-2 text-light" %>
     </div>
