--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -5,7 +5,7 @@
         <%= text_field_tag :query,
           params[:query],
           class: "form-control input-taille",
-          placeholder: "Find an event"
+          placeholder: "Trouver un évenement"
         %>
       <% end %>
       <div class="td" id="s-cover">
