--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,7 +1,7 @@
 .chatroom {
   background: white;
   margin-top: 9px;
-  height: calc(100vh - 75px);
+  height: calc(80vh - 75px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11,6 +11,8 @@
     border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
     padding: 1rem;
+    font-size: 1rem;
+    text-align: center;
   }
 
   .messages {
