--- a/app/views/shared/_formulaireevent.html.erb
+++ b/app/views/shared/_formulaireevent.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :password %>
     <%= f.input :photo, as: :file %>
     <div class="text-center pb-5">
-      <%= f.submit class:"btn btn-cards mb-2 text-light" %>
+      <%= f.submit value: "Ajouter", class:"btn btn-cards mb-2 text-light" %>
     </div>
   <% end %>
 </div>
