--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -79,13 +79,13 @@ span{
 
 .width-size-photo-profil {
   width: 20vw;
-  height: 9vh;
+  height: 20vw;
   top: 22px;
   left: -7px;
   margin: auto;
   object-fit: cover;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  border: 5px solid $primary-color;
+  border: 2px solid $primary-color;
 }
 
 .title-padding{
