--- a/app/views/events/_map_index.html.erb
+++ b/app/views/events/_map_index.html.erb
@@ -13,7 +13,7 @@
             <div class="card-trip-infos">
               <div class="overflow-text">
                 <div class="d-flex align-items-center">
-                  <%= cl_image_tag event.user.photo.key, height: 150, class: "avatar-bordered" %>
+                  <%= cl_image_tag event.user.photo.key,class: "avatar-bordered" %>
                   <h2 class="text-center mb-3 width-titre-map"><%= event.title %></h2>
                 </div>
               </div>
