--- a/app/views/events/_map_index.html.erb
+++ b/app/views/events/_map_index.html.erb
@@ -11,11 +11,9 @@
         <%= link_to event_path(event) do %>
           <div class="card-trip radius h-25 mt-2 mb-2 ms-2 me-2">
             <div class="card-trip-infos">
-              <div class="overflow-text">
-                <div class="d-flex align-items-center">
-                  <%= cl_image_tag event.user.photo.key,class: "avatar-bordered" %>
-                  <h2 class="text-center mb-3 width-titre-map"><%= event.title %></h2>
-                </div>
+              <div class="d-flex justify-content-evently align-items-center">
+                <%= cl_image_tag event.user.photo.key,class: "avatar-bordered" %>
+                <h2 class="text-center mb-3 width-titre-map"><%= event.title %></h2>
               </div>
             </div>
           </div>
