--- a/app/views/pages/events_map.html.erb
+++ b/app/views/pages/events_map.html.erb
@@ -14,11 +14,9 @@
         <%= link_to event_path(event) do %>
           <div class="card-trip radius h-25 m-3">
             <div class="card-trip-infos">
-              <div class="overflow-text">
-                <div class="d-flex">
-                  <%= cl_image_tag event.user.photo.key, height: 150, class: "w-auto avatar-bordered" %>
-                  <h2 class="text-center mb-3"><%= event.title %></h2>
-                </div>
+              <div class="d-flex justify-content-evently">
+                <%= cl_image_tag event.user.photo.key, class: "h-25 w-25 rounded-circle object-fit-cover" %>
+                <h2 class="text-center m-auto p-0"><%= event.title %></h2>
               </div>
             </div>
           </div>
