modification des formulaire de log

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -11,7 +11,7 @@
       <%= cl_image_tag participant.event.photo.key, class: "position-absolute width-size-photo-profil rounded-circle"%>
     </div>
     <div class="card-trip text-center radius h-25 mt-5">
-      <h5 class="card-title title-padding color-font mb-1"><strong><%= participant.event.title %></strong></h5>
+      <h5 class="card-title title-padding color-font ms-5 mt-2 mb-1"><strong><%= participant.event.title %></strong></h5>
       <div class="d-flex p-2">
         <div class="text-center flex-fill w-50 m-auto p-1">
           <p class="color-font mb-1"><i class="fa-solid fa-calendar color-icon me-2"></i> <br> <%= participant.event.date %> </p>
