--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,6 +36,16 @@
             <%# <%= f.text_field :user_id, value: current_user.id, class: "d-none btn btn-cards" %>
             <%= f.submit "S'inscrire", class: "btn btn-cards text-light mb-2" %>
           <% end %>
+          <div class="d-grid">
+            <% @participants.each do |participant| %>
+              <div class="col-3">
+                <div class="gallery text-center" id="gallery">
+                  <%= cl_image_tag participant.user.photo.key, class: "w-25 h-25 p-2 rounded" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+
           <div style="width: 100%; height: 300px;"
             data-controller="map"
             data-map-markers-value="<%= @event_marker.to_json %>"
