--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="text-center m-2">
     <div class="btn btn-cards ">
-      <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+      <%= link_to "Déconnexion", destroy_user_session_path, data: {turbo_method: :delete} %>
     </div>
   </div>
   <div class="margin mb-3">
