condition ajout de photo et comment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,3 +84,11 @@ body{
 .color-font{
   color: $primary-color !important;
 }
+
+.btn-photo{
+  width: 100%;
+  font-size: 0.7rem;
+}
+.size-chat-message{
+  font-size: 0.7rem;
+}
