--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :tricount %>
       <%= f.input :password %>
       <div class="text-center pb-5">
-        <%= f.submit class:"btn btn-cards mb-2 text-light" %>
+        <%= f.submit value: "Modifier", class:"btn btn-cards mb-2 text-light" %>
       </div>
     <% end %>
   </div>
