--- a/app/views/shared/_formulaireimages.html.erb
+++ b/app/views/shared/_formulaireimages.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
-  <%= simple_form_for(@event) do |f| %>
-    <div class="text-center">
-      <%= f.input :images, as: :file, input_html: { multiple: true } %>
-    </div>
-    <div class="text-center pb-2">
-      <%= f.submit value:"Ajouter", class:"btn btn-cards mb-2 text-light" %>
-    </div>
-  <% end %>
-</div>
+<% if @event.participants.find_by(user_id: current_user.id) %>
+  <div class="container">
+    <%= simple_form_for(@event) do |f| %>
+      <div class="text-center">
+        <%= f.input :images, as: :file, input_html: { multiple: true } %>
+      </div>
+      <div class="text-center pb-2">
+        <%= f.submit value:"Ajouter", class:"btn btn-cards mb-2 text-light" %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
