--- a/app/views/shared/_formulaireevent.html.erb
+++ b/app/views/shared/_formulaireevent.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :location %>
     <%= f.input :description %>
     <%= f.input :capacity %>
+    <%= f.input :tricount, input_html: {value: "https://www.tricount.com/fr/creer-des-comptes-nouveau-tricount"} %>
     <%= f.input :status %>
     <%= f.input :password %>
     <%= f.input :photo, as: :file %>
