--- a/app/views/shared/_event_index.erb
+++ b/app/views/shared/_event_index.erb
@@ -17,7 +17,7 @@
           <div class="card-trip radius h-25 mt-3 mb-4">
             <%= cl_image_tag event.photo.key, class: "w-100 h-100 object-fit-cover" %>
             <div class="card-trip-infos">
-              <div class="overflow-text">
+              <div class="overflow-text container">
                 <h2 class="text-center mb-3 mt-2"><%= event.title %></h2>
                 <div class="d-flex justify-content-center align-items-center">
                   <span class="color-font m-auto w-10"><%= event.date %></span>
