--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,6 +15,10 @@
   color: $primary-color;
 }
 
+.color-font-2 {
+  color: $primary-color;
+}
+
 .card-trip > span {
   height: 200px;
   width: 100%;
