--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,13 +50,34 @@
   position: relative;
 }
 
-.card-trip-infos .card-trip-user {
+.card-trip-user {
   position: absolute;
   left: 16px;
   top: -30px;
   width: 16vw;
   height: 16vw;
   object-fit: cover;
+  border-radius: 50%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(133, 54, 234);
+  border-image: initial;
+}
+
+@media screen and (min-width: 450px) and (max-width: 899px) {
+  .card-trip-user {
+    top: -50px !important;
+    width: 10vw !important;
+    height: 10vw !important;
+  }
+}
+
+@media screen and (min-width: 900px){
+  .card-trip-user {
+    top: -40px !important;
+    width: 7vw !important;
+    height: 7vw !important;
+  }
 }
 
 .btn-cards{
